--- a/webflux-coroutine/src/main/resources/application.yml
+++ b/webflux-coroutine/src/main/resources/application.yml
@@ -1,6 +1,6 @@
 spring:
   profiles:
-    active: stress
+    active: local
 ---
 spring:
   output:
@@ -22,7 +22,17 @@ logging:
     kr.jay.webfluxcoroutine: debug
 #    org.springframework.r2dbc.core: debug
 #    org.springframework.r2dbc.connection.init: debug
-
+  pattern:
+    console: "%d{HH:mm:ss.SSS}|%highlight(%-5level)|%X{txid:-}|%green(%t)|%logger|%blue(\\(%F:%L\\))|%msg%n"
+---
+spring:
+  config:
+    activate:
+      on-profile: local
+  r2dbc:
+    url: r2dbc:pool:mariadb://localhost:3306/sample
+    username: user
+    password: 1234
 ---
 spring:
   config:
