--- a/webflux-coroutine/src/main/resources/application.yml
+++ b/webflux-coroutine/src/main/resources/application.yml
@@ -1,6 +1,6 @@
 spring:
   profiles:
-    active: local
+    active: test
 ---
 spring:
   output:
@@ -39,7 +39,7 @@ spring:
     activate:
       on-profile: test
   r2dbc:
-    url: r2dbc:pool:mariadb://localhost:3306/sample
+    url: r2dbc:pool:h2:mem://localhost/sample
     username: user
     password: 1234
 
