--- a/coupon/coupon-consumer/src/main/resources/application-consumer.yml
+++ b/coupon/coupon-consumer/src/main/resources/application-consumer.yml
@@ -3,3 +3,12 @@ spring:
     name: coupon-consumer
 server:
   port: 8081
+
+management:
+  metrics:
+    tags:
+      application: ${spring.application.name}
+  endpoint:
+    web:
+      exposure:
+        include: prometheus
