--- a/webflux-coroutine/src/main/resources/application.yml
+++ b/webflux-coroutine/src/main/resources/application.yml
@@ -1,6 +1,10 @@
 spring:
   profiles:
-    active: test
+    active: local
+
+api:
+  externalUrl: http://localhost:8081
+
 ---
 spring:
   output:
@@ -32,9 +36,14 @@ spring:
     activate:
       on-profile: local
   r2dbc:
-    url: r2dbc:pool:mariadb://localhost:3306/sample
+#    url: r2dbc:pool:mariadb://localhost:3306/sample
+    url: r2dbc:pool:h2:mem://localhost/sample
     username: user
     password: 1234
+  sql:
+    init:
+      mode: always
+      data-locations: classpath:db-init/test.sql
 ---
 spring:
   config:
