--- a/webflux-coroutine/docker-compose.yml
+++ b/webflux-coroutine/docker-compose.yml
@@ -15,3 +15,9 @@ services:
         MYSQL_DATABASE: sample
         MYSQL_USER: user
         MYSQL_PASSWORD: 1234
+  redis:
+    image: redis
+    container_name: redis
+    restart: unless-stopped
+    ports:
+      - "6379:6379"
