--- a/payment/src/main/resources/application.yml
+++ b/payment/src/main/resources/application.yml
@@ -17,6 +17,8 @@ spring:
     redis:
       host: localhost
       port: 6379
+  thymeleaf:
+    cache: off
 
 logging:
   level:
@@ -35,6 +37,11 @@ server:
     include-exception: true
     include-stacktrace: always
 
+payment:
+  toss:
+    key:
+      client: test_ck_ttttttqrterqtewrtwertwertewrtwert
+      secret: flajewfiojaewiufhawesiufhiAFEIHIWSEUFHeiauwhfiuawhef2
 ---
 spring:
   config:
