--- a/kafka-prac/src/main/resources/application.yml
+++ b/kafka-prac/src/main/resources/application.yml
@@ -9,7 +9,10 @@ spring:
     consumer:
       auto-offset-reset: earliest
       group-id: test
-
+  data:
+    redis:
+      host: localhost
+      port: 6379
 logging:
   level:
     kr.jay.kafkaprac: debug
