fix payment consumer

--- a/kafka-prac/src/main/resources/application.yml
+++ b/kafka-prac/src/main/resources/application.yml
@@ -13,6 +13,8 @@ spring:
     redis:
       host: localhost
       port: 6379
+  main:
+    web-application-type: none
 logging:
   level:
     kr.jay.kafkaprac: debug
