결제 이벤트 producer

--- a/payment/src/main/resources/application.yml
+++ b/payment/src/main/resources/application.yml
@@ -21,6 +21,8 @@ spring:
     redis:
       host: localhost
       port: 6379
+  kafka:
+    bootstrap-servers: localhost:9092
   thymeleaf:
     cache: off
 
