--- a/monitoring/prometheus.yml
+++ b/monitoring/prometheus.yml
@@ -11,7 +11,7 @@ scrape_configs:
     static_configs:
       - targets: ['grafana:3000']
 
-  - job_name: 'holmesai'
+  - job_name: 'application'
     metrics_path: '/actuator/prometheus'
     scrape_interval: 1s
     static_configs:
